--- a/api-faulty-log-training/deployment.yaml
+++ b/api-faulty-log-training/deployment.yaml
@@ -15,6 +15,13 @@ spec:
     spec:
       containers:
         - name: api-app
-          image: ghcr.io/kgaweda/api-faulty-log-training:v1.0.0
+          image: ghcr.io/kgaweda/api-faulty-log-training:v1.0.1
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
