--- a/flask-log-training/service.yaml
+++ b/flask-log-training/service.yaml
@@ -8,6 +8,7 @@ spec:
     app: flask-app
   ports:
     - protocol: TCP
+      name: http
       port: 80
       targetPort: 8080
   type: ClusterIP
