Update minReplicas in HPA configuration for api-app and remove replicas from flask-app deployment

--- a/flask-log-training/hpa.yaml
+++ b/flask-log-training/hpa.yaml
@@ -1,15 +1,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: api-app
-  namespace: api-app
+  name: flask-app
+  namespace: flask-app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: api-app
+    name: flask-app
   minReplicas: 1
-  maxReplicas: 40
+  maxReplicas: 10
   metrics:
     - type: Resource
       resource:
